--- a/css/site.css
+++ b/css/site.css
@@ -1,7 +1,7 @@
 
 :root{
     --primary-color: #d5a6ff;
-    --secondary-color:#9aebd5 ; 
+    --secondary-color:#9aebd5; 
     --dark-color: #292929;
     --white-color: #ffffff;
 }
@@ -77,4 +77,19 @@ main>.container {
     left: 0;
     bottom: 0;
     width: 100%;
+}
+
+.Fizz{
+    color: #d880b0;
+    font-weight: bold;
+}
+
+.Buzz{
+    color: #9aebd5;
+    font-weight: bold;
+}
+
+.FizzBuzz{
+    color: #d5a6ff;
+    font-weight: bold;
 }
